# autoclicker

./: Cargo.toml  README.md  build.rs  update_version.sh
.forgejo/workflows/: build.yaml  build_and_test.yaml  tests.yaml
assets/: autoclickerd.service  dev.land.Autoclicker.desktop
autoclicker/: Cargo.toml
autoclicker/src/: comm.rs  dbus.rs  key_parser.rs  keycodes.rs  main.rs  shortcuts.rs  socket.rs  unix.rs  window.rs
autoclicker/src/comm/: dbus.rs  socket.rs
autoclicker/src/key_parser/: strings.rs  tests.rs
autoclicker/src/window/: dialogs.rs  events.rs  shortcut.rs  widgets.rs
autoclickerd/: Cargo.toml
autoclickerd/src/: dbus.rs  hypr.rs  main.rs  socket.rs  vdevice.rs  vkeyboard.rs  vmouse.rs
common/: Cargo.toml
common/src/: actions.rs  config.rs  lib.rs  prelude.rs  settings.rs
common/src/settings/: versions.rs
common/src/settings/versions/: v1.rs  v2.rs  v3.rs  v4.rs  v5.rs
version/: Cargo.toml  build.rs
version/src/: lib.rs
