[workspace]
members = [ "autoclickerd" ]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.41", features = [ "derive" ] }
anyhow = "1.0.98"
nix = { version = "0.30.1", features = [ "user" ] }
serde_json = "1.0.140"
serde = "1.0.219"

version = { path = "version" }
common = { path = "common" }
