[workspace]
members = [ "autoclicker", "autoclickerd" ]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.42", features = [ "derive" ] }
anyhow = "1.0.98"
nix = { version = "0.30.1", features = [ "user" ] }

version = { path = "version" }
common = { path = "common" }