[workspace]
members = ["autoclicker", "autoclickerd"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
clap = { version = "4.5.54", features = ["derive"] }
anyhow = "1.0.100"
nix = { version = "0.31.1", features = ["user"] }
tokio = { version = "1.49.0", features = [
	"rt",
	"rt-multi-thread",
	"net",
	"signal",
	"sync",
	"macros",
	"io-util",
	"time",
	"process",
] }
zbus = { version = "5.13.2" }

version = { path = "version" }
common = { path = "common" }