[package]
name = "autoclicker"
version.workspace = true
edition.workspace = true

[dependencies]
gtk4 = { version = "0.9.0", features = [ "v4_10" ] }
libadwaita = { version = "0.7.1", features = [ "v1_5" ]}
tokio = { version = "1.46.1", features = [ "rt", "rt-multi-thread", "process" ] }
async-channel = "2.5.0"
ashpd = { version = "0.11.0", default-features = false, features = [ "gtk4", "async-std" ]}
futures-util = "0.3.31"
confy = "1.0.0"

tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
nix.workspace = true
serde_json.workspace = true
serde.workspace = true

version.workspace = true
common.workspace = true

[lints.clippy]
needless_return = "allow"
