[package]
name = "autoclicker"
version.workspace = true
edition.workspace = true

[dependencies]
gtk4 = { version = "0.9.6", features = [ "v4_10" ] }
libadwaita = { version = "0.7.2", features = [ "v1_5" ]}
async-channel = "2.5.0"
ashpd = { version = "0.11.0", default-features = false, features = [ "gtk4", "async-std" ]}
futures-util = "0.3.31"
serde = { version = "1.0.219", features = [ "derive" ] }
confy = "1.0.0"
nom = "8.0.0"
nom-language = "0.1.0"

tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
nix.workspace = true
tokio.workspace = true

version.workspace = true
common.workspace = true

[lints.clippy]
needless_return = "allow"
