[package]
name = "autoclickerd"
edition.workspace = true
version.workspace = true

[dependencies]
signal-hook = "0.3.18"
evdev-rs = "0.6.2"
zbus = { version = "5.9.0", default-features = false, features = [ "tokio" ]}

tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
nix.workspace = true
tokio.workspace = true

version.workspace = true
common.workspace = true

[lints.clippy]
needless_return = "allow"
