[package]
name = "autoclickerd"
edition.workspace = true
version.workspace = true

[features]
dbus = ["zbus"]
socket = ["nix"]

[dependencies]
signal-hook = "0.4.3"
evdev-rs = "0.6.3"

zbus = { workspace = true, optional = true }
nix = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true

version.workspace = true
common.workspace = true

[lints.clippy]
needless_return = "allow"